--- a/draft/index.html
+++ b/draft/index.html
@@ -5,64 +5,141 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" media="all"
-        href="https://assets.publishing.service.gov.uk/static/fonts-e9ec5a5f82e5c2a17927ce356e5a054cb28025ec1547ec5d00f5c98d2ec5e481.css"
-        crossorigin="anonymous" integrity="sha256-6exaX4LlwqF5J841bloFTLKAJewVR+xdAPXJjS7F5IE=">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Work+Sans:400,700" rel="stylesheet">
 
     <title>Credible Choice</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li class="active"><a href="index.html">Choose</a></li>
+            <li><a href="auth.html">Register / Authenticate</a></li>
+            <li><a href="donate.html">Donate</a></li>
+        </ul>
+    </nav>
+
     <header>
-        <div id="logo">
-            Credible Choice
-        </div>
         <div id="presentation">
             <div id="brexit" class="bold">Brexit</div>
             <div id="slogan">Make your voice heard right now</div>
         </div>
     </header>
 
-    <section id="id-verification">
-        <h2>Identity Verification</h2>
+    <section>
+        <h2>Your Choice Today</h2>
 
-        <p>
-            This is to make sure one person expresses one choice, although you can change your mind. We check your
-            identity but do not store any personal information about you. Any UK citizen over the age of 17 or person
-            with a UK NI number can make a choice.
-        </p>
+        <form action="">
+            <div class="option selected">
+                We should accept whatever Theresa May is able to agree with the EU
 
-        <div>
-            <input type="text" placeholder="UK Mobile Number">
-            <a class="button" href="choice.html">Get Auth Code By SMS</a>
+                <div class="chosen-by">
+                    Chosen so far by <span class="bold">210,956</span>
+                </div>
+            </div>
+            <div class="option">
+                We should have a decisive break with the EU an envisaged by Jacob Rees Mogg
+
+                <div class="chosen-by">
+                    Chosen so far by <span class="bold">210,956</span>
+                </div>
+            </div>
+            <div class="option">
+                We should stay in the EU on the current basis
+
+                <div class="chosen-by">
+                    Chosen so far by <span class="bold">210,956</span>
+                </div>
+            </div>
+        </form>
+
+        <a class="button" href="donate.html">Register Choice</a>
+    </section>
+
+    <div id="total-choices">
+        Total choices made so far: 676,879
+    </div>
+
+    <section>
+        <h2>Who would you choose to represent your views? (Optional)</h2>
+
+        <p>Optionally you can select a person who would represent your views to parliament and the government</p>
+
+        <table id="list-of-persons">
+            <thead>
+                <th>Person</th>
+                <th>Profession</th>
+                <th>Choices</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>J K Rowling</td>
+                    <td>Writer</td>
+                    <td>456,987</td>
+                </tr>
+                <tr>
+                    <td>J K Rowling</td>
+                    <td>Writer</td>
+                    <td>456,987</td>
+                </tr>
+                <tr>
+                    <td>J K Rowling</td>
+                    <td>Writer</td>
+                    <td>456,987</td>
+                </tr>
+                <tr>
+                    <td>J K Rowling</td>
+                    <td>Writer</td>
+                    <td>456,987</td>
+                </tr>
+                <tr>
+                    <td>J K Rowling</td>
+                    <td>Writer</td>
+                    <td>456,987</td>
+                </tr>
+                <tr>
+                    <td>J K Rowling</td>
+                    <td>Writer</td>
+                    <td>456,987</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p>Showing top <span class="bold">25</span> of <span class="bold">1,345</span> </p>
+
+        <input type="text" placeholder="Search">
+
+        <a class="button" href="donate.html">Register Choice</a>
+    </section>
+
+    <section id="add-person">
+
+        <input type="text" placeholder="New person">
+        <button class="button" href="donate.html">Add</button>
+
+        <p>Any UK citizen with
+            a Wikepedia entry. Confirmation may not be immediate.
+            There is no guarantee
+            that Parliament will take any notice but if someone chosen by a million people they should be heard.</p>
+    </section>
+
+    <footer>
+        <div id="logo">
+            Credible Choice
         </div>
-    </section>
+        <div>
+            Credible choice is a not-for-profit entity that doesn't pay for for services, expenses or salaries. It has
+            no income or costs. The companies and individuals that have made a significant contribution are:
 
+            <ul>
+                <li>XXX (identity authentication services)</li>
+                <li>XXX (website development)</li>
+                <li>PMPR (public relations)</li>
+            </ul>
+        </div>
+    </footer>
 
-    <section id="register">
-        <h2>Register</h2>
-
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
-        <input type="text" placeholder="Date of Birth">
-        <input type="text" placeholder="Post Code">
-        <a class="button" href="choice.html">Register</a>
-    </section>
-
-    <section id="explanation" class="explainer">
-        <p>
-            You can change your mind as many times as you like but only once an hour.
-        </p>
-
-        <p>
-            Time to next ability to change <b>16</b> minutes
-        </p>
-    </section>
-
-    <section id="partners">
-        Identity verification services by experian
-    </section>
 
 
 </body>
