updated person list

--- a/draft/index.html
+++ b/draft/index.html
@@ -74,34 +74,129 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>J K Rowling</td>
+                    <td>JK Rowling</td>
                     <td>Writer</td>
-                    <td>456,987</td>
+                    <td>457,365</td>
                 </tr>
                 <tr>
-                    <td>J K Rowling</td>
+                    <td>Katie Hopkins</td>
                     <td>Writer</td>
-                    <td>456,987</td>
+                    <td>457,365</td>
                 </tr>
                 <tr>
-                    <td>J K Rowling</td>
+                    <td>Piers Morgan</td>
                     <td>Writer</td>
-                    <td>456,987</td>
+                    <td>457,365</td>
                 </tr>
                 <tr>
-                    <td>J K Rowling</td>
-                    <td>Writer</td>
-                    <td>456,987</td>
+                    <td>Gary Lineker</td>
+                    <td>Sports Personality</td>
+                    <td>457,365</td>
                 </tr>
                 <tr>
-                    <td>J K Rowling</td>
-                    <td>Writer</td>
-                    <td>456,987</td>
+                    <td>Jacob Rees Mogg</td>
+                    <td>Politician</td>
+                    <td>457,365</td>
                 </tr>
                 <tr>
-                    <td>J K Rowling</td>
+                    <td>Paula Radcliffe</td>
+                    <td>Sports Personality</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Lawence Dallaglio</td>
+                    <td>Sports Personality</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Ben Ainslie</td>
                     <td>Writer</td>
-                    <td>456,987</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Elton John</td>
+                    <td>Musician</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Billy Brag</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Jarvis Cocker</td>
+                    <td>Musician</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Simon Cowell</td>
+                    <td>Businessman</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Bob Geldof</td>
+                    <td>Activist</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Paloma Faith</td>
+                    <td>Musician</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Patrick Stewart</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Daniel Craig</td>
+                    <td>Actor</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Irdris Elba</td>
+                    <td>Actor</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Helena Bonham Carter</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Markus Brigstocke</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Stewart Lee</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Frankie Boyle</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Danny Boyle</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Jack Munro</td>
+                    <td>Writer</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Russell Brand</td>
+                    <td>Presenter</td>
+                    <td>457,365</td>
+                </tr>
+                <tr>
+                    <td>Nigel Farage</td>
+                    <td>Politician</td>
+                    <td>457,365</td>
                 </tr>
             </tbody>
         </table>
