--- a/draft/donate.html
+++ b/draft/donate.html
@@ -12,20 +12,20 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Choose</a></li>
-            <li><a href="auth.html">Register / Authenticate</a></li>
-            <li class="active"><a href="donate.html">Donate</a></li>
-        </ul>
-    </nav>
-
     <header>
         <div id="presentation">
             <div id="brexit" class="bold">Brexit</div>
             <div id="slogan">Make your voice heard right now</div>
         </div>
     </header>
+
+    <nav>
+        <ul>
+            <li class="active"><a href="index.html">Choose</a></li>
+            <li><a href="auth.html">Register / Login</a></li>
+            <li><a href="donate.html">Donate to Charity</a></li>
+        </ul>
+    </nav>
 
     <section>
         <h2>Charitable Sponsorship</h2>
