--- a/draft/index.html
+++ b/draft/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Work+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" media="all"
+        href="https://assets.publishing.service.gov.uk/static/fonts-e9ec5a5f82e5c2a17927ce356e5a054cb28025ec1547ec5d00f5c98d2ec5e481.css"
+        crossorigin="anonymous" integrity="sha256-6exaX4LlwqF5J841bloFTLKAJewVR+xdAPXJjS7F5IE=">
 
     <title>Credible Choice</title>
     <link rel="stylesheet" href="styles.css">
