--- a/draft/auth.html
+++ b/draft/auth.html
@@ -58,23 +58,13 @@
         <input type="text" placeholder="Post Code">
 
         <div class="security-questions">
-            <h4>ID verification questions</h4>
-            <input type="text" placeholder="What was the name of your first pet?">
-            <input type="text" placeholder="What was your mother's maiden name?">
+            <p>ID verification questions</p>
+            <input type="text" placeholder="What was the ................?">
+            <input type="text" placeholder="When was the ................?">
         </div>
 
         <input type="text" placeholder="UK Mobile Number">
         <a class="button" href="index.html">Get Auth Code By SMS</a>
-    </section>
-
-    <section id="explanation" class="explainer">
-        <p>
-            You can change your mind as many times as you like but only once an hour.
-        </p>
-
-        <p>
-            Time to next ability to change <b>16</b> minutes
-        </p>
     </section>
 
     <footer>
