--- a/draft/index.html
+++ b/draft/index.html
@@ -63,6 +63,16 @@
             <div id="total-choices">
                 Total choices made so far: 676,879
             </div>
+
+            <section id="explanation" class="explainer">
+                <p>
+                    You can change your mind as many times as you like but only once an hour.
+                </p>
+
+                <p>
+                    Time to next ability to change <b>16</b> minutes
+                </p>
+            </section>
         </div>
 
         <div class="sep"></div>
