--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Credible Choice</title>
 
-  <link rel="stylesheet" media="all" href="https://assets.publishing.service.gov.uk/static/fonts-e9ec5a5f82e5c2a17927ce356e5a054cb28025ec1547ec5d00f5c98d2ec5e481.css" crossorigin="anonymous" integrity="sha256-6exaX4LlwqF5J841bloFTLKAJewVR+xdAPXJjS7F5IE=">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
   <script src="/static/main.js"></script>
@@ -16,7 +16,11 @@
 
 <body>
   <script>
-    var app = Elm.Main.init({ flags: { dateTimeNow: Date.now() } });
+    var app = Elm.Main.init({
+      flags: {
+        dateTimeNow: Date.now()
+      }
+    });
   </script>
 </body>
 
