--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
 
+
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/manifest/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/manifest/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/manifest/favicon-16x16.png">
+  <link rel="manifest" href="/static/manifest/site.webmanifest">
+  <link rel="shortcut icon" href="/static/manifest/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="CredibleChoice">
+  <meta name="application-name" content="CredibleChoice">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="msapplication-config" content="/static/manifest/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
+
+
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
   <script src="/static/main.js"></script>
 
